<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Septiman\u200bapp</string>
    <string name="navigation_drawer_open">Navigationsleiste öffnen</string>
    <string name="navigation_drawer_close">Navigationsleiste schließen</string>
<!--    <string name="nav_header_title">Android Studio</string>-->
    <string name="nav_header_subtitle" translatable="false">github.com/BananaNosh/Septimanapp</string>
    <string name="nav_header_desc">Navigationskopfleiste</string>
    <string name="settings">Settings</string>
    <string name="nav_drawer_count_down_pattern">%d T %d h %d min</string>
    <string name="nav_header_count_down_subtext">bis zur Lateinwoche</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_map">Karte</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_horarium">Programm</string>
    <string name="menu_enrol">Anmelden</string>

    <!-- Impressum -->
    <string name="menu_impressum">Impressum</string>
    <string name="impressum_name" translatable="false">Jonathan Loos</string>
    <string name="impressum_address" translatable="false">Mefferdatisstraße 8\n52062 Aachen</string>
    <string name="impressum_mail" translatable="false">noshsapps@gmail.com</string>

    <!-- General dialog -->
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>

    <!-- Horarium -->
    <string name="action_day_view_day">%d Tag</string>
    <string name="action_day_view_days">%d Tage</string>
    <string name="dialog_outdated_horarium">Es gibt noch kein aktuelles Programm.\nDas von letztem Jahr wird angezeigt.</string>
    <string name="dialog_outdated_horarium_title">Kein Programm gefunden</string>
    <string name="dialog_do_not_show_again">Nicht mehr anzeigen</string>
    <string name="snackbar_horarium_not_found">Kein Programm für die ausgewählte Sprache gefunden</string>
    <string name="snackbar_previous_horarium">vergangenen</string>

    <!-- Maps -->
    <string name="explication_map_permission">Berechtigung für Gerätespeicher notwendig für das Anzeigen der Karte</string>
    <string name="snackbar_to_septimana">Bring mich zur Septimana!</string>

    <!-- Enrol -->
    <string name="enrol_last_name_hint">Nachname</string>
    <string name="enrol_first_name_hint">Vorname</string>
    <string name="enrol_checkbox_johannes_haus">Ich möchte im Johanneshaus wohnen.</string>
    <string name="enrol_checkbox_hoehenblick">Ich möchte im Haus Höhenblick wohnen.</string>
    <string name="enrol_room_occupancy_label">Zimmer</string>
    <string name="enrol_room_bathroom_label">Bad</string>
    <string name="enrol_room_remarks_hint">Weitere Wünsche zur Ausstattung</string>
    <string name="enrol_age_label">Alter bei Beginn der Lateinwoche</string>
    <string name="enrol_student_checkbox">Ich bin in der Zeit der Lateinwoche Studentin oder Student.</string>
    <string-array name="enrol_room_occupancy_options">
        <item>(keine Angabe)</item>
        <item>Einzelzimmer (EZ)</item>
        <item>Doppelzimmer (DZ)</item>
        <item>Vierbettzimmer</item>
    </string-array>
    <string-array name="enrol_room_bathroom_options">
        <item>(keine Angabe)</item>
        <item>ohne Bad</item>
        <item>nur WC</item>
        <item>mit Dusche</item>
    </string-array>
    <!-- German labels used to build the (always German) enrolment email; keep index-aligned with the display arrays above -->
    <string-array name="enrol_room_occupancy_email" translatable="false">
        <item>keine Angabe</item>
        <item>EZ</item>
        <item>DZ</item>
        <item>4-Bett</item>
    </string-array>
    <string-array name="enrol_room_bathroom_email" translatable="false">
        <item>keine Angabe</item>
        <item>ohne Bad</item>
        <item>nur WC</item>
        <item>mit Dusche</item>
    </string-array>
    <string name="enrol_street_hint">Straße u. Hausnummer</string>
    <string name="enrol_postal_code_hint">Postleitzahl</string>
    <string name="enrol_city_hint">Wohnort</string>
    <string name="enrol_country_hint">Land</string>
    <string name="enrol_phone_hint">Telephonnummer</string>
    <string name="enrol_mail_hint">Email</string>
    <string name="enrol_years_of_latin_hint" translatable="false">0</string>
    <string name="enrol_years_of_latin_front">Ich habe</string>
    <string name="enrol_years_of_latin_back_sg">Jahr Latein gelernt.</string>
    <string name="enrol_years_of_latin_back_pl">Jahre Latein gelernt.</string>
    <string name="enrol_eating_habit_front">Ich esse</string>
    <string name="enrol_eating_habit_vegan">vegan</string>
    <string name="enrol_eating_habit_vegetarian">vegetarisch</string>
    <string name="enrol_eating_habit_glutenfree">glutenfrei</string>
    <string name="enrol_eating_habit_everything">alles.</string>
    <string name="enrol_eating_habit_allergens">andere Allergene</string>
    <string name="eating_habit_allergens" translatable="false">Allergene</string>
    <string name="eating_habit_vegetarian" translatable="false">Vegetarier/in</string>
    <string name="eating_habit_vegan" translatable="false">Veganer/in</string>
    <string name="eating_habit_gluten" translatable="false">Gluten</string>
    <string name="enrol_instrument_front">Ich bringe ein(e/en)</string>
    <string name="enrol_instrument_hint">Musikinstrument</string>
    <string name="enrol_instrument_back_1">mit.</string>
    <string name="enrol_instrument_back_2">(falls möglich)</string>
    <string name="enrol_veggieday_yes" tools:ignore="Typos">Ich esse Fleisch, finde aber \"Veggietage\" (zwei Tage mit vegetarischem Mittagessen) richtig.</string>
    <string name="enrol_veggieday_no">Ich esse Fleisch und finde es besser, wenn es keine \"Veggietage\" gibt.</string>
    <string name="enrol_address_data_allow">Ich bin damit einverstanden, dass meine Adressdaten auf einer Teilnehmerliste erscheinen, die an die Teilnehmer verteilt wird.</string>
    <string name="enrol_address_data_not_allow">Ich bin damit NICHT einverstanden.</string>
    <string name="enrol_image_allow">Ich bin damit einverstanden, dass auf der Lateinwoche aufgenommene Fotos von mir auf der Homepage oder in Artikeln zur Lateinwoche erscheinen.</string>
    <string name="enrol_image_not_allow">Ich bin damit NICHT einverstanden.</string>
    <string name="enrol_not_all_data_given">Bitte alle notwendigen Informationen angeben!</string>
    <string name="enrol_missing_fields">Bitte folgende Felder ausfüllen: %s</string>
    <string name="enrol_field_address_consent">Einverständnis zur Teilnehmerliste</string>
    <string name="enrol_field_image_consent">Einverständnis zu Fotos</string>
    <string name="dialog_confirm_enrolment_title">Verbindlich Anmelden</string>
    <string name="dialog_confirm_enrolment">Hiermit bestätige ich, dass ich volljährig bin und mich mit dem Senden der in Folge erstellten Email verbindlich zur Lateinwoche anmelde, sowie, dass ich meine Angaben überprüft habe.</string>
    <string name="enrol_send_email_hoehenblick" translatable="false">Haus Höhenblick</string>
    <string name="enrol_send_email_johanneshaus" translatable="false">Johanneshaus</string>
    <string name="enrol_send_email_address" translatable="false">thomas@septimanalatina.org</string>
    <string name="enrol_send_email_subject" translatable="false">Anmeldung Lateinwoche %s - %s, %s</string>
    <string name="enrol_send_email_template" translatable="false">%s %s\n%s\n%s\n%s\n%s\n\n%s\n%s\nIm %s wohnen: %s\nZimmerkategorie: %s\nAlter: %d\nJahre Latein: %.1f\nStudent: %s\n%s\nInstrument: %s\nBilder ok: %s\nAdresse auf Liste ok: %s</string>
    <string name="enrol_send_eating_habit_no_meat" translatable="false">Nein, da Veganer*in oder Vegetarier*in</string>
    <string name="enrol_send_yes" translatable="false">Ja</string>
    <string name="enrol_send_no" translatable="false">Nein</string>

    <!-- Settings -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="settings_title_language">Sprache</string>
    <string name="settings_use_latin">Auf Latein</string>
    <string name="settings_summary_use_latin_off">App wird in der Gerätesprache angezeigt</string>
    <string name="settings_summary_use_latin_on">App displayed in Latin</string> % should never be shown
    <string name="settings_title_others">Sonstiges</string>
    <string name="settings_open_source">Open Source Lizenzen</string>
    <string name="settings_summary_open_source">Zeigt die Lizenzen benutzter Software</string>
    <string name="dialog_licenses_title">Open Source Lizenzen</string>
    <string name="action_horarium_language">Show timetable in %s</string>
    <string name="settings_summary_version">Version: %s</string>

    <!-- Language stuff-->
    <string name="language" tools:ignore="ExtraTranslation,MissingTranslation">language %s</string>
    <string name="language_latin" tools:ignore="ExtraTranslation,MissingTranslation">-</string>
    <string name="language_english" tools:ignore="ExtraTranslation,MissingTranslation">-</string>
    <string name="language_german" tools:ignore="ExtraTranslation,MissingTranslation">-</string>
    <string name="language_french" tools:ignore="ExtraTranslation,MissingTranslation">-</string>
    <string name="language_unknown" tools:ignore="ExtraTranslation,MissingTranslation">-</string>
    <string name="dialog_choose_language">Should Septimanapp be displayed in Latin or German?%s</string>

    <!-- Notifications-->
    <string name="action_notify_enrol_reminder" translatable="false">com.nobodysapps.septimanapp.action.ENROL_REMINDER</string>
    <string name="action_notify_continue_enrol_reminder" translatable="false">com.nobodysapps.septimanapp.action.CONTINUE_ENROL_REMINDER</string>
    <string name="action_mark_already_enrolled" translatable="false">com.nobodysapps.septimanapp.action.ALREADY_ENROLLED</string>
    <string name="action_remind_later" translatable="false">com.nobodysapps.septimanapp.action.REMIND_LATER</string>
    <string name="action_do_not_ask_again" translatable="false">com.nobodysapps.septimanapp.action.NOT_ASK_AGAIN</string>
    <string name="notification_enrol_title">Anmeldung zur Lateinwoche</string>
    <string name="notification_enrol_text">Hast du dich schon für die Lateinwoche angemeldet?</string>
    <string name="notification_action_title_do_not_ask_again">Nicht erneut fragen</string>
    <string name="notification_action_title_already_enrolled">Schon passiert</string>
    <string name="notification_action_title_remind_later">Später</string>
    <string name="notification_continue_enrol_text">Vergiss nicht deine Anmeldung abzuschließen.</string>
    <string name="privacy_statement"><a href="https://banananosh.github.io/datenschutzerklaerung.html">privacy policy</a></string>
    <string name="dialog_confirm_enrolment_data_privacy">I hereby confirm that I have read and understood the <a href="https://banananosh.github.io/datenschutzerklaerung.html">privacy policy</a>.</string>

</resources>