<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_horarium"
            android:checked="true"
            android:icon="@drawable/ic_timetable"
            android:title="@string/menu_horarium" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_enrol"
            android:icon="@drawable/ic_assignment"
            android:title="@string/menu_enrol" />
    </group>

    <item android:title="">
        <menu>
            <item android:title=""/>
        </menu>
    </item>

    <item
        android:title="" /> <!-- Footer space, to scroll correctly -->
    <item
        android:title="" />
</menu>
