<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/appIconIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_above="@id/headerAppNameTV"
        app:srcCompat="@mipmap/ic_launcher" />

    <com.nobodysapps.septimanapp.view.CountDownView
        android:id="@+id/countDownTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_above="@id/countDownSubTV"
        android:layout_marginEnd="@dimen/small_gap"
        android:layout_marginRight="@dimen/small_gap"
        android:layout_marginBottom="-4dp"
        android:gravity="center"
        android:textSize="@dimen/big_text_size"
        tools:text="120 T 5 h 30 min" />

    <TextView
        android:id="@+id/countDownSubTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/appIconIV"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/nav_header_count_down_subtext" />

    <TextView
        android:id="@+id/headerAppNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/headerMailTV"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/headerMailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/nav_header_subtitle" />

</RelativeLayout>
